--- a/mainstyle.css
+++ b/mainstyle.css
@@ -22,6 +22,7 @@ body{
     display: inline-flex;
     justify-content: center;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   margin-top: -10px;
   margin-left: -10px;
